aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__or__tests__or_reg_reg.snap
---
source: aya-parser/src/parser/instructions/or.rs
expression: result
---
Instruction(
    OrRegReg(
        Register(
            ByteOffset {
                start: 3,
                end: 5,
            },
        ),
        Register(
            ByteOffset {
                start: 7,
                end: 9,
            },
        ),
    ),
)
